--- a/LineDrawing/templates/index.html
+++ b/LineDrawing/templates/index.html
@@ -26,5 +26,6 @@
     <button type="button" id="erase">Erase</button>
     <button type="button" id="save">Save</button>
     <button type="button" id="last">Get Last Line</button>
+    <button type="button" id="all">Get All Line</button>
 </body>
 </html>
